6.3.ClassChoosingEvenNumbersFromCollection